# SPECTRA

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md
benchmarks/comparison/: config.yaml  dataset_builders.py  ml_benchmark.py  models.py  speed_benchmark.py  visualize.py
benchmarks/torchsig_compat/: adapter.py  install.py  label_map.py
docs/: contributing.md  index.md
docs/api/: algorithms.md  antennas.md  arrays.md  benchmarks.md  classifiers.md  curriculum.md  datasets.md  environment.md  impairments.md  link.md  receivers.md  scene.md  streaming.md  transforms.md  utils.md  waveforms.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/plans/: 2026-03-01-spectra-architecture-design.md  2026-03-01-spectra-implementation.md  2026-03-02-example-notebooks.md  2026-03-02-streaming-dataset-engine-design.md  2026-03-02-streaming-dataset-engine-implementation.md  2026-03-04-s3ca-paper-reproduction-notebook-design.md  2026-03-04-s3ca-paper-reproduction-notebook.md  2026-03-05-doppler-shift-impairment.md  2026-03-05-snr-sweep-benchmark.md  2026-03-07-choi-williams-distribution.md  2026-03-11-domain-adaptation-transforms-implementation.md  2026-03-11-domain-adaptation-transforms.md
docs/user-guide/: 5g-nr.md  benchmarks.md  curriculum-streaming.md  datasets.md  direction-finding.md  file-io.md  impairments.md  link-simulation.md  multifunction-emitters.md  propagation.md  protocols.md  scene-composition.md  studio.md  transforms.md  waveforms.md
examples/: 01_basic_waveforms.ipynb  01_basic_waveforms.py  02_impairments_and_channels.ipynb  02_impairments_and_channels.py  03_transforms_and_spectrograms.ipynb  03_transforms_and_spectrograms.py  04_narrowband_dataset.py  05_wideband_scenes.ipynb  05_wideband_scenes.py  06_full_pipeline.py  07_csp_features.ipynb  07_csp_features.py  08_csp_classification.py  09_s3ca_vs_ssca.ipynb  09_s3ca_vs_ssca.py  10_s3ca_paper_reproduction.py  11_train_narrowband_cnn.py  12_cwd_cross_term_suppression.ipynb  12_cwd_cross_term_suppression.py  13_direction_finding.ipynb  13_direction_finding.py  14_beamforming.py  15_radar_processing.ipynb  15_radar_processing.py  16_wideband_direction_finding.py  17_radar_pipeline.ipynb  17_radar_pipeline.py  18_link_simulator.py  19_wvd_time_frequency.py  README.md  plot_helpers.py
examples/antenna_arrays/: antenna_elements.py  array_geometries.py  beamforming.ipynb  beamforming.py  direction_finding.ipynb  direction_finding.py  wideband_direction_finding.ipynb  wideband_direction_finding.py
examples/benchmarks/: benchmark_evaluation.py
examples/classification/: csp_classification.ipynb  csp_classification.py  full_pipeline.ipynb  full_pipeline.py  resnet_amc.py  train_narrowband_cnn.py
examples/communications/: link_simulator.ipynb  link_simulator.py
examples/cyclostationary/: csp_features.ipynb  csp_features.py  cwd_cross_term_suppression.ipynb  cwd_cross_term_suppression.py  s3ca_vs_ssca.ipynb  s3ca_vs_ssca.py  wvd_time_frequency.py
examples/datasets/: augmentation_wrappers.py  dataset_io.py  folder_and_manifest.py  lightning_datamodule.py  narrowband_dataset.ipynb  narrowband_dataset.py  snr_sweep_evaluation.py  streaming_curriculum.py  wideband_scenes.ipynb  wideband_scenes.py
examples/environment/: propagation_and_links.py  terrestrial_propagation_models.py  urban_5g_scene.py
examples/getting_started/: basic_waveforms.ipynb  basic_waveforms.py  impairments_and_channels.ipynb  impairments_and_channels.py  transforms_and_spectrograms.ipynb  (+1 more)
rust/: Cargo.toml
tests/: conftest.py  helpers.py  test_amc.py  test_antennas.py  test_arrays.py  test_atmospheric.py  test_augmentations.py  test_beamforming.py  test_benchmark_models.py  test_benchmark_spectra18.py  test_benchmark_spectra18_wideband.py  test_benchmark_spectra40.py  test_benchmark_spectra_channel.py  test_benchmark_spectra_df.py  test_benchmark_spectra_snr.py  test_benchmarks.py  test_class_balancing.py  test_cli_config_builder.py  test_cli_main.py  test_clutter.py  test_csp_dataset.py  test_csp_format.py  test_csp_transforms.py  test_curriculum.py  test_dataset_configs.py  test_dataset_profiler.py  test_datasets.py  test_datasets_base.py  test_df_snr_sweep.py  test_direction_finding_dataset.py  test_doa_algorithms.py  test_dsp_utils.py  test_environment.py  test_environment_integration.py  test_file_readers.py  test_file_writers.py  test_folder_dataset.py  test_hann_cache.py  test_impairments.py  test_impairments_dc_offset.py  (+89 more)
(+294 files in other folders)
