[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "spectra"
version = "0.1.0"
description = "Realistic radar and communication waveform generation with PyTorch integration"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
zarr = ["zarr>=2.16"]
classifiers = ["scikit-learn>=1.0"]
io = ["sigmf>=1.0", "h5py>=3.0"]
alignment = ["scipy>=1.10"]
all = ["pyyaml>=6.0", "zarr>=2.16", "scikit-learn>=1.0", "sigmf>=1.0", "h5py>=3.0", "scipy>=1.10"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pymdown-extensions>=10.0",
]
dev = [
    "maturin>=1.9,<2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyyaml>=6.0",
    "zarr>=2.16",
    "h5py>=3.0",
]

[project.urls]
Homepage = "https://github.com/gditzler/SPECTRA"
Repository = "https://github.com/gditzler/SPECTRA"
Documentation = "https://gditzler.github.io/SPECTRA"
Changelog = "https://github.com/gditzler/SPECTRA/blob/main/CHANGELOG.md"

[project.scripts]
spectra-build = "spectra.cli.signal_builder:main"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "python"
module-name = "spectra._rust"
bindings = "pyo3"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = ["--tb=short", "-v", "--strict-markers"]
markers = [
    "slow: marks tests as slow",
    "rust: marks tests that exercise Rust FFI directly",
    "csp: marks cyclostationary signal processing tests",
    "io: marks tests requiring file I/O optional dependencies",
    "benchmark: marks benchmark output format and logic tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
